classDiagram
direction LR
class BuoyTransferController {
    -List~Transfer~ transfers
    -List~ReceiveTransfer~ receives
    -ConveyorController conveyor
    -int generation
    -float flightSpeed
    -float receiveFlightDuration
    -float receiveLaunchDelay
    +bool IsPaused
    +SetPaused(bool paused) void
    +SetReceiveSettings(float duration, float delay) void
    +BuoyTransferController(ConveyorController conveyor)
    ~BeginReceive(BuoyStack stack, ConveyorBuoyGroup group, Action completed) void
    ~BeginReceive(BuoyStack stack, ConveyorBuoyGroup group, int baseIndex, Action completed, float? duration = null, float? delay = null, Action~int~ consumed = null, float descentDuration = 0f, float topClearance = 0f) void
    +Begin(BuoyStack stack, Vector2Int outlet, BuoyStackHolder sourceHolder, Action completed) void
    ~BeginFromQueue(BuoyStack stack, Action completed, Action~ConveyorBuoyGroup~ departing) void
    -BeginExport(BuoyStack stack, BuoyStackHolder sourceHolder, Action completed, Action~float, Func~Vector3_float~, Action~ConveyorBuoyGroup~~ requestEntry, Action~ConveyorBuoyGroup~ departing = null) void
    +Tick(float deltaTime, float speed, float interval) void
    -LaunchReceiveFlights(ReceiveTransfer transfer) void$
    -TickReceives(float deltaTime) void
    -EvaluateArc(Vector3 start, Vector3 target, Vector3 up, float progress, float height) Vector3$
    +Clear() void
}
class Transfer {
    +BuoyStack Stack
    +List~Buoy~ Selected
    +ConveyorBuoyGroup Group
    +Action Completed
    +List~Flight~ Flights
    +int Next, Arrived
    +float Timer, Elapsed, ExpectedArrival
}
class ReceiveTransfer {
    +Action~int~ Consumed
    +BuoyStack Stack
    +ConveyorBuoyGroup Group
    +Action Completed
    +List~ReceiveFlight~ Flights
    +int BaseIndex, Count, Next, Arrived
    +float Elapsed, Duration, Delay, DescentDuration, TopClearance
}
class ReceiveFlight {
    +Buoy Buoy
    +int Slot
    +Vector3 StartPosition, ApexPosition
    +float LaunchTime
    +bool Arrived
}
class Flight {
    +Vector3 StartPosition, Up
    +float Elapsed, Duration
    +Buoy Buoy
    +int Slot
    +bool Arrived
}
BuoyTransferController *-- Transfer
BuoyTransferController *-- ReceiveTransfer
Transfer *-- Flight
ReceiveTransfer *-- ReceiveFlight
